--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>方方的个人简历</title>
   <script src="//at.alicdn.com/t/font_451045_32zbfqegtq3t0529.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.0/css/swiper.min.css">
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
